# ACM-works

./: .gitignore  CMakeLists.txt  README.md  a.cpp  in.txt  temp.cpp  test  test.cpp  未命名2.cpp  未命名3.cpp
1/: A.cpp  H.cpp  I.cpp  K.cpp  L.cpp  M.cpp
2015regional/: A.cpp  B.cpp  D.cpp  E.cpp  J.cpp  L.cpp  P.cpp
2015铜牌题/: C.cpp  F.cpp  I.cpp  O.cpp  Q.cpp
2017Training/3.28/: J.cpp
2017Training/4.6/: B.cpp  C.cpp  F.cpp  I.cpp
2017Training/6.26/: C.cpp
BC/: A.cpp  C.cpp  H.cpp  I.cpp
CF/CF Temp/: A.cpp  B.cpp  C.cpp
CF/CF219/: D.cpp
CF/CF287/: B.cpp
CF/CF55/: d.cpp
CF/CF670/: cf670a.cpp  cf670b.cpp  cf670c.cpp
CF/CF678/: cf678a.cpp  cf678b.cpp  cf678c.cpp  cf678d.cpp
CF/CF680/: cf680A.cpp  cf680B.cpp  cf680c.cpp
CF/CF689/: A.cpp
CF/CF697/: B.cpp
CF/CF699/: D.cpp
CF/CF702/: A.cpp  B.cpp
CF/CF719/: B.cpp  C.cpp
CF/CF750/: c  c.cpp  temp-tfdlczlmqb
CF/CF766/: a  a.cpp  b  b.cpp  c.cpp  d  d.cpp
CF/CF779/: A  A.cpp  B  B.cpp  C.cpp  D  D.cpp  temp-wgiwiethaz
CF/CF782/: A  A.cpp  B.cpp
CF/CF785/: A.cpp  B.cpp  C.cpp
CF/CF789/: A.cpp  C.cpp
CF/CF799/: C.cpp
CF/CF812/: A.cpp  B.cpp  C.cpp  G.cpp  out.txt
CF/CF821/: A.cpp  B.cpp  C.cpp
CF/CF832/: A.cpp  B.cpp  C.cpp  D.cpp  G.cpp
CF/CF834/: A.cpp  B.cpp  C.cpp  D.cpp
CF/CF835/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
CF/CF839/: A.cpp  B.cpp  C.cpp  D.cpp
CF/CF841/: A.cpp  B.cpp  C.cpp  D.cpp
CF/cf764/: a  a.cpp  b.cpp  c  c.cpp  d  d.cpp  temp-mbvqborqrz
CF/cf765/: A  A.cpp
CF模板/: A.cpp
CSU/: 1632.cpp
CUIT/: ._cuit1022.cpp  cuit1022  cuit1022.cpp  cuit2010.cpp
FZU/: 2109.cpp
HDU/: 1005.cpp  1233.cpp  1233prim.cpp  1242.cpp  1269.cpp  1503.cpp  1520.cpp  1561.cpp  1665.cpp  1711.cpp  1724.cpp  1827.cpp  1829.cpp  1846.cpp  1863.cpp  1863prim.cpp  1874.cpp  1875.cpp  1875prim.cpp  1879.cpp  1879prim.cpp  2089.cpp  2121.cpp  2147.cpp  2196.cpp  2713.cpp  3072.cpp  3555.cpp  3652.cpp  3709.cpp  4009.cpp  4305.cpp  4352.cpp  4734.cpp  4751.cpp  4990.cpp  5007.cpp  5015.cpp  5017.cpp  5680.cpp  (+19 more)
Hihocoder/: 1121.cpp
PAT/: 1.cpp  2.cpp  3.cpp
POJ/: 1067.cpp  1068.cpp  1144.cpp  1192.cpp  1195.cpp  1328.cpp  1523.cpp  1573.cpp  1753.cpp  1847.cpp  2079.cpp  2104.cpp  2187.cpp  2342.cpp  2443.cpp  2531.cpp  2586.cpp  2774.cpp  2955.cpp  2965.cpp  2976.cpp  2993.cpp  2996.CPP  3130.cpp  3164.cpp  3244.cpp  3295.cpp  3299.cpp  3352.cpp  3685.cpp  3693.cpp  POJ2155.cpp  POJ2299.cpp  POJ2352.cpp  POJ3067.cpp  POJ3070  POJ3070.cpp  POJ3126.cpp  POJ3253.cpp  POJ3264_  (+9 more)
Personal Training/4.26/: A.cpp  C.cpp  G.cpp  I.cpp  in.txt
Personal Training/PT1/: B.cpp  H.cpp  J.cpp
Personal Training/PT2/: D.cpp  J.cpp
Personal Trainning/PT1/: A  A.cpp  B  H  I  I.cpp  J  in.txt  temp-brkxqdsuqm  temp-lbecykyvyf  temp-zdoyrzmwfq
Personal Trainning/PT2/: B.cpp  C.cpp  F.cpp  G.cpp  H.cpp  J.cpp
Team TR Temp/: A.cpp
Teamwork/2017Training/Team TR Temp/: 1001A.cpp  1004E.cpp  1007G.cpp
Teamwork/2017Training/Team TR Temp0/: A.cpp
Template/Data Structure/: 线段树(区间).cpp
Template/Geometry/: Graham.cpp  circle.cpp  point.cpp  polygon.cpp
Template/String/: Suffix array.cpp
Todo/: a.cpp
Trainning/: cf675b.cpp
UESTC/: 250.cpp  92.cpp
UESTC/DP/: a.cpp
URAL/: 92.cpp  ural1627.cpp  ural1793.cpp
UVA/: 10766.cpp  11178.cpp  11183.cpp  11796.cpp  12003.cpp  12304.cpp  3485.cpp  4728.cpp
WEAK WIN/1/: A.cpp
WEAK WIN/12/: A.cpp
WEAK WIN/CF200/: A.cpp  out.txt
WEAK WIN/CF703/: A.cpp  B.cpp
WEAK WIN/CF705/: A.cpp  B.cpp  C.cpp
WEAK WIN/CF706/: A.cpp  B.cpp
Winter/WIN1/: G.cpp  Main.java  b.cpp  c  c.cpp  d  d.cpp  e  e.cpp  h  h.cpp
Winter/WIN2/: B  B.cpp  D  D.cpp  E  E.cpp  F  F.cpp  G  G.cpp  H  H.cpp  I  I.cpp  L  L.cpp  temp-aeamsumgll  temp-fhnlqnjasa  temp-lbvnafkbug  temp-qqguyigoqd  temp-tifztqtiyh  temp-vkfgegpcuh  temp-vompvwtugm
Winter/WIN3/: A  A.cpp  B  B.cpp  C  C.cpp  E  E.cpp  G  G.cpp  H  H.cpp  I  I.cpp  temp-mifcwhalgy  temp-mvfywnihua  temp-uuegefdymy  temp-yrnarpvybk  temp-zqjmhxckku
Winter/WIN4/: a  a.cpp  h  h.cpp  in.txt
Winter/Winter1/: A.cpp  B  B.cpp  C  C.cpp  E  E.cpp  a  temp-anamurcslz  temp-anamurcslz.cpp  temp-qgdgpozupg
Winter/Winter2/: B  B.cpp  E  E.cpp  F  F.cpp  a  a.cpp  i  i.cpp  temp-fbohfqsudy  temp-gtmhjxxhaw  test
Winter/Winter3/: A  A.cpp  a.out  i.cpp  k  k.cpp  temp-bemidfewmh  temp-igaygbkpgn  temp-xqfgegywbm
ZOJ/: zoj3175.cpp
others/: PKUC17F.cpp  SPOJDETER3.cpp  in.txt  spoj-ciru2.cpp  spoj-highways.cpp
模板/: KMP模板.cpp  后缀数组.cpp  字典树(查找).cpp  并查集模板.cpp  归并排序求逆序对.cpp  新建 Microsoft Excel 工作表.xls  最长上升子序列.cpp  树状数组.cpp  素数.cpp
汪汪/: BIT  BIT.cpp  RMQ  RMQ.cpp  a  a.cpp  aa  aa.cpp  线段树  线段树.cpp
训练赛/: 4.6f.cpp  4.6j.cpp  5.8d.cpp  cf672c.cpp  cf675a.cpp  f.cpp  比赛模板 (2).lnk  比赛模板 (3).lnk  比赛模板.lnk
