cmake_minimum_required(VERSION 3.6)
project(ACM)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        1/A.cpp
        1/B.cpp
        1/C.cpp
        1/D.cpp
        1/E.cpp
        1/F.cpp
        1/G.cpp
        1/H.cpp
        1/I.cpp
        1/J.cpp
        1/K.cpp
        1/L.cpp
        1/M.cpp
        2015铜牌题/A.cpp
        2015铜牌题/B.cpp
        2015铜牌题/C.cpp
        2015铜牌题/D.cpp
        2015铜牌题/E.cpp
        2015铜牌题/F.cpp
        2015铜牌题/G.cpp
        2015铜牌题/H.cpp
        2015铜牌题/I.cpp
        2015铜牌题/J.cpp
        2015铜牌题/K.cpp
        2015铜牌题/L.cpp
        2015铜牌题/M.cpp
        2015铜牌题/N.cpp
        2015铜牌题/O.cpp
        2015铜牌题/P.cpp
        2015铜牌题/Q.cpp
        BC/A.cpp
        BC/B.cpp
        BC/C.cpp
        BC/D.cpp
        BC/E.cpp
        BC/F.cpp
        BC/G.cpp
        BC/H.cpp
        BC/I.cpp
        BC/J.cpp
        BC/K.cpp
        BC/L.cpp
        BC/M.cpp
        CF/CF670/cf670a.cpp
        CF/CF670/cf670b.cpp
        CF/CF670/cf670c.cpp
        CF/CF678/cf678a.cpp
        CF/CF678/cf678b.cpp
        CF/CF678/cf678c.cpp
        CF/CF678/cf678d.cpp
        CF/CF680/cf680A.cpp
        CF/CF680/cf680B.cpp
        CF/CF680/cf680c.cpp
        CF/CF689/A.cpp
        CF/CF697/B.cpp
        CF/CF699/D.cpp
        CF/CF702/A.cpp
        CF/CF702/B.cpp
        CF/CF719/A.cpp
        CF/CF719/B.cpp
        CF/CF719/C.cpp
        CF/CF719/D.cpp
        CF/CF719/E.cpp
        CF/CF719/F.cpp
        CF/CF719/G.cpp
        CF/CF750/c.cpp
        CF/cf764/a.cpp
        CF/cf764/b.cpp
        CF/cf764/c.cpp
        CF/cf764/d.cpp
        CF/cf765/A.cpp
        CF/cf765/B.cpp
        CF/CF766/a.cpp
        CF/CF766/b.cpp
        CF/CF766/c.cpp
        CF/CF766/d.cpp
        CF模板/A.cpp
        CF模板/B.cpp
        CF模板/C.cpp
        CF模板/D.cpp
        CF模板/E.cpp
        CF模板/F.cpp
        CF模板/G.cpp
        CUIT/cuit1022.cpp
        CUIT/cuit2010.cpp
        HDU/1846.cpp
        HDU/2147.cpp
        "HDU/hdu 5680.cpp"
        HDU/hdu1156.cpp
        HDU/hdu1242.cpp
        HDU/hdu1503.cpp
        HDU/hdu1513.cpp
        HDU/hdu1711.cpp
        HDU/hdu1874.cpp
        HDU/hdu2199.cpp
        HDU/hdu2713.cpp
        HDU/hdu5920.cpp
        HDU/hdu5950.cpp
        HDU/新建文本文档.cpp
        POJ/1067.cpp
        POJ/1847.cpp
        POJ/POJ1195.cpp
        POJ/POJ2155.cpp
        POJ/POJ2299.cpp
        POJ/POJ2352.cpp
        POJ/POJ3067.cpp
        POJ/POJ3070.cpp
        POJ/POJ3253.cpp
        POJ/poj3264.cpp
        POJ/POJ3264_.cpp
        POJ/poj3928.cpp
        UESTC/DP/a.cpp
        "WEAK WIN/1/A.cpp"
        "WEAK WIN/1/B.cpp"
        "WEAK WIN/1/C.cpp"
        "WEAK WIN/1/D.cpp"
        "WEAK WIN/1/E.cpp"
        "WEAK WIN/1/F.cpp"
        "WEAK WIN/1/G.cpp"
        "WEAK WIN/1/H.cpp"
        "WEAK WIN/1/I.cpp"
        "WEAK WIN/1/J.cpp"
        "WEAK WIN/1/K.cpp"
        "WEAK WIN/1/L.cpp"
        "WEAK WIN/12/A.cpp"
        "WEAK WIN/12/B.cpp"
        "WEAK WIN/12/C.cpp"
        "WEAK WIN/12/D.cpp"
        "WEAK WIN/12/E.cpp"
        "WEAK WIN/12/F.cpp"
        "WEAK WIN/12/G.cpp"
        "WEAK WIN/12/H.cpp"
        "WEAK WIN/12/I.cpp"
        "WEAK WIN/12/J.cpp"
        "WEAK WIN/12/K.cpp"
        "WEAK WIN/12/L.cpp"
        "WEAK WIN/CF200/A.cpp"
        "WEAK WIN/CF200/B.cpp"
        "WEAK WIN/CF200/C.cpp"
        "WEAK WIN/CF200/D.cpp"
        "WEAK WIN/CF200/E.cpp"
        "WEAK WIN/CF200/F.cpp"
        "WEAK WIN/CF200/G.cpp"
        "WEAK WIN/CF703/A.cpp"
        "WEAK WIN/CF703/B.cpp"
        "WEAK WIN/CF703/C.cpp"
        "WEAK WIN/CF703/D.cpp"
        "WEAK WIN/CF703/E.cpp"
        "WEAK WIN/CF703/F.cpp"
        "WEAK WIN/CF703/G.cpp"
        "WEAK WIN/CF703/H.cpp"
        "WEAK WIN/CF703/I.cpp"
        "WEAK WIN/CF703/J.cpp"
        "WEAK WIN/CF703/K.cpp"
        "WEAK WIN/CF703/L.cpp"
        "WEAK WIN/CF705/A.cpp"
        "WEAK WIN/CF705/B.cpp"
        "WEAK WIN/CF705/C.cpp"
        "WEAK WIN/CF705/D.cpp"
        "WEAK WIN/CF705/E.cpp"
        "WEAK WIN/CF706/A.cpp"
        "WEAK WIN/CF706/B.cpp"
        "WEAK WIN/CF706/C.cpp"
        "WEAK WIN/CF706/D.cpp"
        "WEAK WIN/CF706/E.cpp"
        Winter/WIN1/b.cpp
        Winter/WIN1/c.cpp
        Winter/WIN1/d.cpp
        Winter/WIN1/e.cpp
        Winter/WIN1/G.cpp
        Winter/WIN1/h.cpp
        Winter/WIN2/A.cpp
        Winter/WIN2/B.cpp
        Winter/WIN2/C.cpp
        Winter/WIN2/D.cpp
        Winter/WIN2/E.cpp
        Winter/WIN2/F.cpp
        Winter/WIN2/G.cpp
        Winter/WIN2/H.cpp
        Winter/WIN2/I.cpp
        Winter/WIN2/J.cpp
        Winter/WIN2/K.cpp
        Winter/WIN2/L.cpp
        Winter/WIN3/A.cpp
        Winter/WIN3/B.cpp
        Winter/WIN3/C.cpp
        Winter/WIN3/D.cpp
        Winter/WIN3/E.cpp
        Winter/WIN3/F.cpp
        Winter/WIN3/G.cpp
        Winter/WIN3/H.cpp
        Winter/WIN3/I.cpp
        Winter/WIN3/J.cpp
        Winter/WIN3/K.cpp
        Winter/WIN3/L.cpp
        Winter/WIN4/a.cpp
        Winter/WIN4/h.cpp
        Winter/Winter1/A.cpp
        Winter/Winter1/B.cpp
        Winter/Winter1/C.cpp
        Winter/Winter1/E.cpp
        Winter/Winter1/temp-anamurcslz.cpp
        Winter/Winter2/a.cpp
        Winter/Winter2/B.cpp
        Winter/Winter2/E.cpp
        Winter/Winter2/F.cpp
        Winter/Winter2/i.cpp
        Winter/Winter3/A.cpp
        Winter/Winter3/i.cpp
        Winter/Winter3/k.cpp
        模板/KMP模板.cpp
        模板/后缀数组.cpp
        "模板/字典树(查找).cpp"
        模板/并查集模板.cpp
        模板/归并排序求逆序对.cpp
        模板/最长上升子序列.cpp
        模板/树状数组.cpp
        模板/素数.cpp
        比赛模板/A.cpp
        比赛模板/B.cpp
        比赛模板/C.cpp
        比赛模板/D.cpp
        比赛模板/E.cpp
        比赛模板/F.cpp
        比赛模板/G.cpp
        比赛模板/H.cpp
        比赛模板/I.cpp
        比赛模板/J.cpp
        比赛模板/K.cpp
        比赛模板/L.cpp
        汪汪/a.cpp
        汪汪/aa.cpp
        汪汪/BIT.cpp
        汪汪/RMQ.cpp
        汪汪/线段树.cpp
        训练赛/10.1/A.cpp
        训练赛/10.1/B.cpp
        训练赛/10.1/C.cpp
        训练赛/10.1/D.cpp
        训练赛/10.1/E.cpp
        训练赛/10.1/F.cpp
        训练赛/10.1/G.cpp
        训练赛/10.1/H.cpp
        训练赛/10.1/I.cpp
        训练赛/10.1/J.cpp
        训练赛/10.1/K.cpp
        训练赛/10.1/L.cpp
        训练赛/10.3/A.cpp
        训练赛/10.3/B.cpp
        训练赛/10.3/C.cpp
        训练赛/10.3/D.cpp
        训练赛/10.3/E.cpp
        训练赛/10.3/F.cpp
        训练赛/10.3/G.cpp
        训练赛/10.3/H.cpp
        训练赛/10.3/I.cpp
        训练赛/10.3/J.cpp
        训练赛/10.3/K.cpp
        训练赛/10.3/L.cpp
        训练赛/10.4/A.cpp
        训练赛/10.4/B.cpp
        训练赛/10.4/C.cpp
        训练赛/10.4/D.cpp
        训练赛/10.4/E.cpp
        训练赛/10.4/F.cpp
        训练赛/10.4/G.cpp
        训练赛/10.4/H.cpp
        训练赛/10.4/I.cpp
        训练赛/10.4/J.cpp
        训练赛/10.4/K.cpp
        训练赛/10.4/L.cpp
        训练赛/10.5/A.cpp
        训练赛/10.5/B.cpp
        训练赛/10.5/C.cpp
        训练赛/10.5/D.cpp
        训练赛/10.5/E.cpp
        训练赛/10.5/F.cpp
        训练赛/10.5/G.cpp
        训练赛/10.5/H.cpp
        训练赛/10.5/I.cpp
        训练赛/10.5/J.cpp
        训练赛/10.5/K.cpp
        训练赛/10.5/L.cpp
        训练赛/5.22/5.22a.cpp
        训练赛/5.22/5.22b.cpp
        训练赛/5.22/5.22c.cpp
        训练赛/5.22/5.22d.cpp
        训练赛/5.22/5.22e.cpp
        训练赛/5.22/5.22h.cpp
        训练赛/5.22/5.22i.cpp
        训练赛/5.22/5.22j.cpp
        训练赛/6.10训练赛/b.cpp
        训练赛/6.10训练赛/c.cpp
        训练赛/6.10训练赛/E.CPP
        训练赛/6.10训练赛/f.cpp
        训练赛/6.10训练赛/I.cpp
        训练赛/6.10训练赛/j.cpp
        训练赛/6.11/A.cpp
        训练赛/6.11/B.cpp
        训练赛/6.11/C.cpp
        训练赛/6.11/D.cpp
        训练赛/6.11/E.cpp
        训练赛/6.11/F.cpp
        训练赛/6.11/F.h
        训练赛/6.11/G.cpp
        训练赛/6.11/H.cpp
        训练赛/6.11/I.cpp
        训练赛/6.11/J.cpp
        训练赛/6.21/1.cpp
        训练赛/6.21/2.cpp
        训练赛/6.21/3.cpp
        训练赛/6.21/4.cpp
        训练赛/6.21/5.cpp
        训练赛/6.21/6.cpp
        训练赛/6.21/7.cpp
        训练赛/6.21/8.cpp
        训练赛/6.23/1.cpp
        训练赛/6.23/2.cpp
        训练赛/6.23/3.cpp
        训练赛/6.23/4.cpp
        训练赛/6.23/5.cpp
        训练赛/6.23/6.cpp
        训练赛/6.23/7.cpp
        训练赛/6.23/8.cpp
        训练赛/6.5训练赛/a.cpp
        训练赛/6.7/b.cpp
        训练赛/6.7/f.cpp
        训练赛/7.12/A.cpp
        训练赛/7.12/B.cpp
        训练赛/7.12/D.cpp
        训练赛/7.12/E.cpp
        训练赛/7.12/g.cpp
        训练赛/7.12/J.cpp
        训练赛/7.13/A.cpp
        训练赛/7.13/B.cpp
        训练赛/7.13/C.cpp
        训练赛/7.13/E.cpp
        训练赛/7.13/G.cpp
        训练赛/7.14/a.cpp
        训练赛/7.14/G.cpp
        训练赛/7.15/A.cpp
        训练赛/7.15/c.cpp
        训练赛/7.15/F.cpp
        训练赛/7.15/k.cpp
        训练赛/7.18/h.cpp
        训练赛/7.18/I.cpp
        训练赛/7.19/A.cpp
        训练赛/7.19/D.cpp
        训练赛/7.19/E.cpp
        训练赛/7.19/xigua.cpp
        训练赛/7.20/E.cpp
        训练赛/7.20/模拟.cpp
        "训练赛/7.21/A (2).cpp"
        训练赛/7.21/A.cpp
        "训练赛/7.21/B (2).cpp"
        训练赛/7.21/B.cpp
        "训练赛/7.21/C (2).cpp"
        训练赛/7.21/C.cpp
        训练赛/7.21/D.cpp
        训练赛/7.21/E.cpp
        训练赛/7.21/F.cpp
        训练赛/7.21/G.cpp
        训练赛/7.21/H.cpp
        训练赛/7.21/I.cpp
        训练赛/7.21/J.cpp
        "训练赛/7.21/K - 副本.cpp"
        训练赛/7.21/K.cpp
        训练赛/7.21/L.cpp
        训练赛/7.21/M.cpp
        训练赛/7.23/A.cpp
        训练赛/7.23/B.cpp
        训练赛/7.23/C.cpp
        训练赛/7.23/D.cpp
        训练赛/7.23/E.cpp
        训练赛/7.23/F.cpp
        训练赛/7.23/G.cpp
        训练赛/7.23/H.cpp
        训练赛/7.23/I.cpp
        训练赛/7.23/J.cpp
        训练赛/7.23/K.cpp
        训练赛/7.23/L.cpp
        训练赛/7.23/M.cpp
        训练赛/7.26/A.cpp
        训练赛/7.26/B.cpp
        训练赛/7.26/C.cpp
        训练赛/7.26/D.cpp
        训练赛/7.26/E.cpp
        训练赛/7.26/F.cpp
        训练赛/7.26/G.cpp
        训练赛/7.26/H.cpp
        训练赛/7.26/I.cpp
        训练赛/7.26/J.cpp
        训练赛/7.26/K.cpp
        训练赛/7.26/L.cpp
        训练赛/7.26/M.cpp
        训练赛/7.28/A.cpp
        训练赛/7.28/B.cpp
        训练赛/7.28/C.cpp
        训练赛/7.28/D.cpp
        训练赛/7.28/E.cpp
        训练赛/7.28/F.cpp
        训练赛/7.28/G.cpp
        训练赛/7.28/H.cpp
        训练赛/7.28/I.cpp
        训练赛/7.28/J.cpp
        训练赛/7.28/K.cpp
        训练赛/7.28/L.cpp
        训练赛/7.28/M.cpp
        训练赛/8.11/A.cpp
        训练赛/8.11/B.cpp
        训练赛/8.11/C.cpp
        训练赛/8.11/D.cpp
        训练赛/8.11/E.cpp
        训练赛/8.11/F.cpp
        训练赛/8.11/G.cpp
        训练赛/8.11/H.cpp
        训练赛/8.11/I.cpp
        训练赛/8.11/J.cpp
        训练赛/8.11/K.cpp
        训练赛/8.11/L.cpp
        训练赛/8.11/M.cpp
        训练赛/8.12/A.cpp
        训练赛/8.12/B.cpp
        训练赛/8.12/C.cpp
        训练赛/8.12/D.cpp
        训练赛/8.12/E.cpp
        训练赛/8.12/F.cpp
        训练赛/8.12/G.cpp
        训练赛/8.12/H.cpp
        训练赛/8.12/I.cpp
        训练赛/8.12/J.cpp
        训练赛/8.12/K.cpp
        训练赛/8.12/L.cpp
        训练赛/8.12/M.cpp
        训练赛/8.13/A.cpp
        训练赛/8.13/B.cpp
        训练赛/8.13/C.cpp
        训练赛/8.13/D.cpp
        训练赛/8.13/E.cpp
        训练赛/8.13/F.cpp
        训练赛/8.13/G.cpp
        训练赛/8.13/H.cpp
        训练赛/8.13/I.cpp
        训练赛/8.13/J.cpp
        训练赛/8.13/K.cpp
        训练赛/8.13/L.cpp
        训练赛/8.13/M.cpp
        训练赛/8.14/A.cpp
        训练赛/8.14/B.cpp
        训练赛/8.14/C.cpp
        训练赛/8.14/D.cpp
        训练赛/8.14/E.cpp
        训练赛/8.14/F.cpp
        训练赛/8.14/G.cpp
        训练赛/8.14/H.cpp
        训练赛/8.14/I.cpp
        训练赛/8.14/J.cpp
        训练赛/8.14/K.cpp
        训练赛/8.14/L.cpp
        训练赛/8.15/A.cpp
        训练赛/8.15/B.cpp
        训练赛/8.15/C.cpp
        训练赛/8.15/D.cpp
        训练赛/8.15/E.cpp
        训练赛/8.15/F.cpp
        训练赛/8.15/G.cpp
        训练赛/8.15/H.cpp
        训练赛/8.15/I.cpp
        训练赛/8.15/J.cpp
        训练赛/8.15/K.cpp
        训练赛/8.15/L.cpp
        训练赛/8.16/A.cpp
        训练赛/8.16/B.cpp
        训练赛/8.16/C.cpp
        训练赛/8.16/D.cpp
        训练赛/8.16/E.cpp
        训练赛/8.16/F.cpp
        训练赛/8.16/G.cpp
        训练赛/8.16/H.cpp
        训练赛/8.16/I.cpp
        训练赛/8.16/J.cpp
        训练赛/8.16/K.cpp
        训练赛/8.16/L.cpp
        训练赛/8.17/A.cpp
        训练赛/8.17/B.cpp
        训练赛/8.17/C.cpp
        训练赛/8.17/D.cpp
        训练赛/8.17/E.cpp
        训练赛/8.17/F.cpp
        训练赛/8.17/G.cpp
        训练赛/8.17/H.cpp
        训练赛/8.17/I.cpp
        训练赛/8.17/J.cpp
        训练赛/8.17/K.cpp
        训练赛/8.17/L.cpp
        训练赛/8.18/A.cpp
        训练赛/8.18/B.cpp
        训练赛/8.18/C.cpp
        训练赛/8.18/D.cpp
        训练赛/8.18/E.cpp
        训练赛/8.18/F.cpp
        训练赛/8.18/G.cpp
        训练赛/8.18/H.cpp
        训练赛/8.18/I.cpp
        训练赛/8.18/J.cpp
        训练赛/8.18/K.cpp
        训练赛/8.18/L.cpp
        训练赛/8.19/A.cpp
        训练赛/8.19/B.cpp
        训练赛/8.19/C.cpp
        训练赛/8.19/D.cpp
        训练赛/8.19/E.cpp
        训练赛/8.19/F.cpp
        训练赛/8.19/G.cpp
        训练赛/8.19/H.cpp
        训练赛/8.19/I.cpp
        训练赛/8.19/J.cpp
        训练赛/8.19/K.cpp
        训练赛/8.19/L.cpp
        训练赛/8.2/A.cpp
        训练赛/8.2/B.cpp
        训练赛/8.2/C.cpp
        训练赛/8.2/D.cpp
        训练赛/8.2/E.cpp
        训练赛/8.2/F.cpp
        训练赛/8.2/G.cpp
        训练赛/8.2/H.cpp
        训练赛/8.2/I.cpp
        训练赛/8.2/J.cpp
        训练赛/8.2/K.cpp
        训练赛/8.2/L.cpp
        训练赛/8.2/M.cpp
        训练赛/8.27/A.cpp
        训练赛/8.27/B.cpp
        训练赛/8.27/C.cpp
        训练赛/8.27/D.cpp
        训练赛/8.27/E.cpp
        训练赛/8.27/F.cpp
        训练赛/8.27/G.cpp
        训练赛/8.27/H.cpp
        训练赛/8.27/I.cpp
        训练赛/8.27/J.cpp
        训练赛/8.27/K.cpp
        训练赛/8.27/L.cpp
        训练赛/8.28/A.cpp
        训练赛/8.28/B.cpp
        "训练赛/8.28/C - 副本 - 副本.cpp"
        "训练赛/8.28/C - 副本.cpp"
        训练赛/8.28/C.cpp
        训练赛/8.28/D.cpp
        训练赛/8.28/E.cpp
        训练赛/8.28/F.cpp
        训练赛/8.28/G.cpp
        训练赛/8.28/H.cpp
        训练赛/8.28/I.cpp
        训练赛/8.28/J.cpp
        训练赛/8.28/K.cpp
        训练赛/8.28/L.cpp
        训练赛/8.29/A.cpp
        训练赛/8.29/B.cpp
        训练赛/8.29/C.cpp
        训练赛/8.29/D.cpp
        训练赛/8.29/E.cpp
        训练赛/8.29/F.cpp
        训练赛/8.29/G.cpp
        训练赛/8.29/H.cpp
        训练赛/8.29/H.h
        训练赛/8.29/I.cpp
        训练赛/8.29/J.cpp
        训练赛/8.29/K.cpp
        训练赛/8.29/L.cpp
        训练赛/8.3/3.cpp
        训练赛/8.31/A.cpp
        训练赛/8.31/B.cpp
        训练赛/8.31/C.cpp
        训练赛/8.31/D.cpp
        训练赛/8.31/E.cpp
        训练赛/8.31/F.cpp
        训练赛/8.31/G.cpp
        训练赛/8.31/H.cpp
        训练赛/8.31/I.cpp
        训练赛/8.31/J.cpp
        训练赛/8.31/K.cpp
        训练赛/8.31/L.cpp
        训练赛/8.6/A.cpp
        训练赛/8.6/B.cpp
        训练赛/8.6/C.cpp
        训练赛/8.6/D.cpp
        训练赛/8.6/E.cpp
        训练赛/8.6/F.cpp
        训练赛/8.6/G.cpp
        训练赛/8.6/H.cpp
        训练赛/8.6/I.cpp
        训练赛/8.6/J.cpp
        训练赛/8.6/K.cpp
        训练赛/8.6/L.cpp
        训练赛/8.6/M.cpp
        训练赛/8.9/A.cpp
        训练赛/8.9/B.cpp
        训练赛/8.9/C.cpp
        训练赛/8.9/D.cpp
        训练赛/8.9/E.cpp
        训练赛/8.9/F.cpp
        训练赛/8.9/G.cpp
        训练赛/8.9/H.cpp
        训练赛/8.9/I.cpp
        训练赛/8.9/J.cpp
        训练赛/8.9/js.cpp
        训练赛/8.9/K.cpp
        训练赛/8.9/L.cpp
        训练赛/8.9/M.cpp
        训练赛/9.1/A.cpp
        训练赛/9.1/B.cpp
        训练赛/9.1/C.cpp
        训练赛/9.1/D.cpp
        训练赛/9.1/E.cpp
        训练赛/9.1/F.cpp
        训练赛/9.1/G.cpp
        训练赛/9.1/H.cpp
        训练赛/9.1/I.cpp
        训练赛/9.1/J.cpp
        训练赛/9.1/K.cpp
        训练赛/9.1/L.cpp
        训练赛/9.10/A.cpp
        训练赛/9.10/B.cpp
        训练赛/9.10/C.cpp
        训练赛/9.10/D.cpp
        训练赛/9.10/E.cpp
        训练赛/9.10/F.cpp
        训练赛/9.10/G.cpp
        训练赛/9.10/H.cpp
        训练赛/9.10/I.cpp
        训练赛/9.10/J.cpp
        训练赛/9.10/K.cpp
        训练赛/9.10/L.cpp
        训练赛/9.13/A.cpp
        训练赛/9.13/B.cpp
        训练赛/9.13/C.cpp
        训练赛/9.13/D.cpp
        训练赛/9.13/E.cpp
        训练赛/9.13/F.cpp
        训练赛/9.13/G.cpp
        训练赛/9.13/H.cpp
        训练赛/9.13/I.cpp
        训练赛/9.13/J.cpp
        训练赛/9.13/K.cpp
        训练赛/9.13/L.cpp
        训练赛/9.17/A.cpp
        训练赛/9.17/B.cpp
        训练赛/9.17/C.cpp
        训练赛/9.17/D.cpp
        训练赛/9.17/E.cpp
        训练赛/9.17/F.cpp
        训练赛/9.17/G.cpp
        训练赛/9.17/H.cpp
        训练赛/9.17/I.cpp
        训练赛/9.17/J.cpp
        训练赛/9.17/K.cpp
        训练赛/9.17/L.cpp
        训练赛/9.18/A.cpp
        训练赛/9.18/B.cpp
        训练赛/9.18/C.cpp
        训练赛/9.18/D.cpp
        训练赛/9.18/E.cpp
        训练赛/9.18/F.cpp
        训练赛/9.18/G.cpp
        训练赛/9.18/H.cpp
        训练赛/9.18/I.cpp
        训练赛/9.18/J.cpp
        训练赛/9.18/K.cpp
        训练赛/9.18/L.cpp
        训练赛/9.2/A.cpp
        训练赛/9.2/B.cpp
        训练赛/9.2/C.cpp
        训练赛/9.2/D.cpp
        训练赛/9.2/E.cpp
        训练赛/9.2/F.cpp
        训练赛/9.2/G.cpp
        训练赛/9.2/H.cpp
        训练赛/9.2/I.cpp
        训练赛/9.2/J.cpp
        训练赛/9.2/K.cpp
        训练赛/9.2/L.cpp
        训练赛/9.24/A.cpp
        训练赛/9.24/B.cpp
        训练赛/9.24/C.cpp
        训练赛/9.24/D.cpp
        训练赛/9.24/E.cpp
        训练赛/9.24/F.cpp
        训练赛/9.24/G.cpp
        训练赛/9.24/H.cpp
        训练赛/9.24/I.cpp
        训练赛/9.24/J.cpp
        训练赛/9.24/K.cpp
        训练赛/9.24/L.cpp
        训练赛/9.25/A.cpp
        训练赛/9.25/B.cpp
        训练赛/9.25/C.cpp
        训练赛/9.25/D.cpp
        训练赛/9.25/E.cpp
        训练赛/9.25/F.cpp
        训练赛/9.25/G.cpp
        训练赛/9.25/H.cpp
        训练赛/9.25/I.cpp
        训练赛/9.25/J.cpp
        训练赛/9.25/K.cpp
        训练赛/9.25/L.cpp
        训练赛/9.29/A.cpp
        训练赛/9.29/B.cpp
        训练赛/9.29/C.cpp
        训练赛/9.29/D.cpp
        训练赛/9.29/E.cpp
        训练赛/9.29/F.cpp
        训练赛/9.29/G.cpp
        训练赛/9.29/H.cpp
        训练赛/9.29/I.cpp
        训练赛/9.29/J.cpp
        训练赛/9.29/K.cpp
        训练赛/9.29/L.cpp
        训练赛/9.6/A.cpp
        训练赛/9.6/B.cpp
        训练赛/9.6/C.cpp
        训练赛/9.6/D.cpp
        训练赛/9.6/E.cpp
        训练赛/9.6/F.cpp
        训练赛/9.6/G.cpp
        训练赛/9.6/H.cpp
        训练赛/9.6/I.cpp
        训练赛/9.6/J.cpp
        训练赛/9.6/K.cpp
        训练赛/9.6/L.cpp
        训练赛/9.8/A.cpp
        训练赛/9.8/B.cpp
        训练赛/9.8/C.cpp
        训练赛/9.8/D.cpp
        训练赛/9.8/E.cpp
        训练赛/9.8/F.cpp
        训练赛/9.8/G.cpp
        训练赛/9.8/H.cpp
        训练赛/9.8/I.cpp
        训练赛/9.8/J.cpp
        训练赛/9.8/K.cpp
        训练赛/9.8/L.cpp
        训练赛/4.6f.cpp
        训练赛/4.6j.cpp
        训练赛/5.2训练赛.cpp
        训练赛/5.8a.cpp
        训练赛/5.8b.cpp
        训练赛/5.8d.cpp
        训练赛/cf672c.cpp
        训练赛/cf675a.cpp
        训练赛/cf675b.cpp
        训练赛/f.cpp
        test.cpp)

add_executable(ACM ${SOURCE_FILES})